--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -18,3 +18,14 @@ span {
 a:visited {
   color: #0000ff;
 }
+
+.latest-posts-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.latest-posts-heading h2 {
+  padding: 0;
+}
